feat:新增mt-app代码 + 第六章、环境准备与项目安装笔记

--- a/笔记/koa2安装和mongoDB.html
+++ b/笔记/koa2安装和mongoDB.html
@@ -25,6 +25,8 @@ mongoose.connect(dbConfig.dbs,{
 
 mongod --dbpath "D:\Program Files\MongoDB\Server\3.6\data\db" --logpath "D:\Program Files\MongoDB\Server\3.6\data\log\MongoDB.txt" --install --serviceName "MongoDB"
 
+mongod --dbpath "D:\data\db" --logpath "D:\data\log\MongoDB.txt" --install --serviceName "MongoDB"
+
 说明：
 
 --dbpath：指定MongoDB的数据库目录
